--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.20.8",
+    "@clerk/clerk-expo": "^0.19.7",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.11",
+    "expo": "^50.0.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
