--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "test": "jest --watchAll",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll"
+    "web": "expo start --web"
   },
   "jest": {
     "preset": "jest-expo"
@@ -34,8 +35,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.3",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
